# sounds

./: README.md
conv1/: Cargo.toml  README.md  sources.tsv
conv1/scripts/: download_samples.sh  render_all.sh
conv1/src/: audio.rs  concat.rs  convolution.rs  lib.rs  main.rs  manifest.rs  render.rs
conv2/: .gitignore  Cargo.toml  README.md
conv2/scripts/: download_samples.sh
conv2/src/: audio.rs  concat.rs  convolution.rs  main.rs  render.rs
conv3/: Cargo.toml  README.md
conv3/scripts/: download_samples.sh
conv3/src/: main.rs  render.rs
conv4/: Cargo.toml  README.md  sources.tsv
conv4/scripts/: download_samples.sh
conv4/src/: convolution.rs  main.rs  manifest.rs  render.rs
conv5/: Cargo.toml  README.md  sources.tsv
conv5/scripts/: download_samples.sh
conv5/src/: lib.rs  main.rs  manifest.rs  render.rs
conv6/: Cargo.toml  README.md  category_candidates.md  sources.tsv
conv6/scripts/: download_samples.sh
conv6/src/: main.rs  manifest.rs  render.rs
conv7/: .gitignore  Cargo.toml  README.md  sources.tsv
conv7/scripts/: download_samples.sh
conv7/src/: concat.rs  convolution.rs  main.rs  manifest.rs  render.rs
conv8/: Cargo.toml  README.md  chords.tsv
conv8/scripts/: download_samples.sh
conv8/src/: audio.rs  concat.rs  convolution.rs  lib.rs  main.rs  pitch.rs  render.rs
